--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 	--html-color-100: #c14723;
 	--primary-color-900: #6f00ff;
 	--secondary-color-900: rgba(255, 0, 0, 0.635);
-	--box-shadow-500: 1px 1px 10px -2px rgb(90, 90, 90);
+	--box-shadow-500: 2px 2px 5px rgba(170, 169, 169, 0.5);
 }
 html {
 	scroll-behavior: smooth;
@@ -65,8 +65,95 @@ body {
 		width: 7rem;
 	}
 }
-
-/* MENU TABS */
+/* NAVBAR */
+.nav-container {
+	width: 100vw;
+	height: 6rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	box-shadow: var(--box-shadow-500);
+}
+.nav-center {
+	width: 90%;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.logo {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.logo-symbol {
+	font-size: 1.75rem;
+	color: var(--html-color-100);
+}
+.logo-text {
+	font-size: 1rem;
+	color: var(--js-color-100);
+	letter-spacing: 1px;
+}
+.logo-text span {
+	color: var(--css-color-100);
+}
+.nav-link {
+	position: relative;
+	padding: 0.35rem 0;
+	letter-spacing: 1px;
+	font-size: 1.2rem;
+	font-weight: 600;
+	color: var(--primary-color-400);
+	transition: all 0.5s;
+}
+.nav-link::after {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	width: 0%;
+	height: 3px;
+	background-color: var(--html-color-100);
+	transition: all 0.3s;
+}
+.nav-link::before {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	right: 50%;
+	width: 0%;
+	height: 3px;
+	background-color: var(--html-color-100);
+	transition: all 0.3s;
+}
+.nav-link:hover {
+	color: var(--js-color-100);
+}
+.nav-link:hover::after {
+	width: 50%;
+}
+.nav-link:hover::before {
+	width: 50%;
+}
+.social-icons-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 0.85rem;
+}
+.social-icon {
+	font-size: 1.75rem;
+	color: var(--css-color-100);
+	will-change: contents;
+	transition: all 0.5s;
+}
+.social-icon:hover {
+	color: var(--js-color-100);
+	transform: scale(1.2);
+}
+/* HERO */
 .main-container {
 	display: flex;
 	flex-direction: column;
@@ -75,15 +162,15 @@ body {
 	width: 85vw;
 	margin: 0 auto;
 	padding-bottom: 2rem;
-
 	gap: 4rem;
 }
 
 .hero {
 	display: flex;
+	flex-direction: row;
 	align-items: center;
 	justify-content: center;
-	min-height: 100vh;
+	height: 100vh;
 	width: 90vw;
 	max-width: 1300px;
 	gap: 5rem;
