--- a/src/index.css
+++ b/src/index.css
@@ -68,18 +68,22 @@ body {
 /* NAVBAR */
 .nav-container {
 	width: 100vw;
-	height: 6rem;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
 	box-shadow: var(--box-shadow-500);
+	transition: height 0.5s ease-in-out;
 }
+
 .nav-center {
-	width: 90%;
+	width: 85%;
+	max-width: 1200px;
 	margin: 0 auto;
 	display: flex;
+	flex-direction: column;
+}
+.nav-header {
+	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	padding: 1.5rem 0;
 }
 .logo {
 	display: flex;
@@ -90,6 +94,7 @@ body {
 .logo-symbol {
 	font-size: 1.75rem;
 	color: var(--html-color-100);
+	line-height: 1;
 }
 .logo-text {
 	font-size: 1rem;
@@ -99,6 +104,22 @@ body {
 .logo-text span {
 	color: var(--css-color-100);
 }
+
+.nav-footer {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 0;
+	margin: 0 auto;
+	overflow: hidden;
+	gap: 3rem;
+	transition: all 0.5s ease-in-out;
+}
+
+.nav-links-container {
+	display: flex;
+}
+
 .nav-link {
 	position: relative;
 	padding: 0.35rem 0;
@@ -143,15 +164,56 @@ body {
 	justify-content: center;
 	gap: 0.85rem;
 }
-.social-icon {
+.social-icon,
+.burguer-icon {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	font-size: 1.75rem;
 	color: var(--css-color-100);
 	will-change: contents;
-	transition: all 0.5s;
+	transition: all 0.3s;
 }
 .social-icon:hover {
-	color: var(--js-color-100);
 	transform: scale(1.2);
+}
+.burguer-icon {
+	display: flex;
+	transition: transform 0.5s;
+}
+.burguer-icon:hover {
+	color: var(--js-color-100);
+	transform: rotate(90deg);
+}
+/* js inserted classes */
+.show-container {
+	height: 3rem;
+	padding-bottom: 1rem;
+}
+
+@media (min-width: 600px) {
+	.nav-center {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		/* justify-content: space-between; */
+	}
+	.nav-footer {
+		flex: 1 0 auto;
+		height: auto !important;
+	}
+	.burguer-icon {
+		display: none;
+	}
+	.nav-links-container {
+		margin: 0 auto;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	.social-icons-container {
+		display: flex;
+	}
 }
 /* HERO */
 .main-container {
