css structuration done

--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,11 @@
 	--primary-color-200: #ebebeb;
 	--primary-color-400: #555;
 	--js-color-100: #d6ba32;
+	--js-color-200: #fffae0;
 	--css-color-100: #285ea8;
 	--html-color-100: #c14723;
 	--primary-color-900: #6f00ff;
-	--secondary-color-900: rgba(255, 0, 0, 0.635);
+	--secondary-color-900: rgb(255, 213, 73);
 	--box-shadow-500: 2px 2px 5px rgba(170, 169, 169, 0.5);
 }
 html {
@@ -37,332 +38,4 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-}
-
-/* LOADING */
-.loading-container {
-	position: absolute;
-	top: 0;
-	left: 0;
-	display: grid;
-	width: 100vw;
-	height: 100vh;
-	place-items: center;
-	background-color: var(--primary-color-500);
-	z-index: 1;
-}
-.loading-circle {
-	width: 7rem;
-	height: 3.5rem;
-	border-bottom: 10px dotted var(--primary-color-900);
-	animation: loading 1s linear infinite alternate-reverse;
-}
-
-@keyframes loading {
-	0% {
-		width: 0;
-	}
-	100% {
-		width: 7rem;
-	}
-}
-/* NAVBAR */
-.nav-container {
-	width: 100vw;
-	box-shadow: var(--box-shadow-500);
-	transition: height 0.5s ease-in-out;
-}
-
-.nav-center {
-	width: 85%;
-	max-width: 1200px;
-	margin: 0 auto;
-	display: flex;
-	flex-direction: column;
-}
-.nav-header {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 1.5rem 0;
-}
-.logo {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-}
-.logo-symbol {
-	font-size: 1.75rem;
-	color: var(--html-color-100);
-	line-height: 1;
-}
-.logo-text {
-	font-size: 1rem;
-	color: var(--js-color-100);
-	letter-spacing: 1px;
-}
-.logo-text span {
-	color: var(--css-color-100);
-}
-
-.nav-footer {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 0;
-	margin: 0 auto;
-	overflow: hidden;
-	gap: 3rem;
-	transition: all 0.5s ease-in-out;
-}
-
-.nav-links-container {
-	display: flex;
-}
-
-.nav-link {
-	position: relative;
-	padding: 0.35rem 0;
-	letter-spacing: 1px;
-	font-size: 1.2rem;
-	font-weight: 600;
-	color: var(--primary-color-400);
-	transition: all 0.5s;
-}
-.nav-link::after {
-	content: "";
-	position: absolute;
-	bottom: 0;
-	left: 50%;
-	width: 0%;
-	height: 3px;
-	background-color: var(--html-color-100);
-	transition: all 0.3s;
-}
-.nav-link::before {
-	content: "";
-	position: absolute;
-	bottom: 0;
-	right: 50%;
-	width: 0%;
-	height: 3px;
-	background-color: var(--html-color-100);
-	transition: all 0.3s;
-}
-.nav-link:hover {
-	color: var(--js-color-100);
-}
-.nav-link:hover::after {
-	width: 50%;
-}
-.nav-link:hover::before {
-	width: 50%;
-}
-.social-icons-container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	gap: 0.85rem;
-}
-.social-icon,
-.burguer-icon {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 1.75rem;
-	color: var(--css-color-100);
-	will-change: contents;
-	transition: all 0.3s;
-}
-.social-icon:hover {
-	transform: scale(1.2);
-}
-.burguer-icon {
-	display: flex;
-	transition: transform 0.5s;
-}
-.burguer-icon:hover {
-	color: var(--js-color-100);
-	transform: rotate(90deg);
-}
-/* js inserted classes */
-.show-container {
-	height: 3rem;
-	padding-bottom: 1rem;
-}
-
-@media (min-width: 600px) {
-	.nav-center {
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		/* justify-content: space-between; */
-	}
-	.nav-footer {
-		flex: 1 0 auto;
-		height: auto !important;
-	}
-	.burguer-icon {
-		display: none;
-	}
-	.nav-links-container {
-		margin: 0 auto;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-	}
-	.social-icons-container {
-		display: flex;
-	}
-}
-/* HERO */
-
-.hero {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	height: 100vh;
-	width: 90vw;
-	max-width: 1300px;
-	gap: 5rem;
-	margin: 0 auto;
-}
-.hero-info-container {
-	width: 90%;
-	display: flex;
-	flex-direction: column;
-	gap: 2rem;
-	justify-content: center;
-	align-items: center;
-}
-.hero-img {
-	width: 300px;
-	display: none;
-}
-.hero-title {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: clamp(2rem, 4vw, 3rem);
-	font-weight: 700;
-	letter-spacing: 2px;
-	color: var(--html-color-100);
-}
-.hero-text {
-	width: 90%;
-	font-size: 1.25rem;
-	line-height: 1.5;
-	letter-spacing: 1px;
-	color: var(--primary-color-400);
-	/* text-align: left; */
-	margin: 0 auto;
-}
-.hero-text span {
-	letter-spacing: 3px;
-	font-weight: 700;
-	border-bottom: 2px solid var(--primary-color-600);
-}
-.hero-btn {
-	border: 2px solid var(--js-color-100);
-	background-color: var(--js-color-100);
-	padding: 0.5rem 2rem;
-	width: 220px;
-	border-radius: 5px;
-	font-size: 1.25rem;
-	letter-spacing: 1px;
-	color: var(--primary-color-100);
-	will-change: contents;
-	transition: all 0.5s;
-	/* margin: 0 auto; */
-}
-.hero-btn:hover {
-	border-color: var(--html-color-100);
-	background-color: var(--primary-color-100);
-	color: var(--html-color-100);
-	transform: scale(1.05);
-}
-@media (min-width: 700px) {
-	.hero-img {
-		display: block;
-	}
-	.hero-info-container {
-		width: 60%;
-		align-items: flex-start;
-	}
-	.hero-title {
-		margin-left: 0 auto;
-		text-align: left;
-	}
-	.hero-btn {
-		margin-left: 0 auto;
-	}
-	.hero-text {
-		width: 100%;
-		margin-left: 0;
-	}
-}
-/* PROJECTS SECTION */
-.projects-container {
-	min-height: 100vh;
-	width: 100%;
-	display: flex;
-	padding: 2rem 0;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
-	gap: 2rem;
-	background-color: var(--primary-color-200);
-}
-.project-cards-container {
-	width: 70%;
-	max-width: 1300px;
-	display: grid;
-	grid-template-columns: 1fr;
-	align-items: center;
-	justify-content: center;
-	gap: 2rem;
-}
-.project-card {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
-	box-shadow: var(--box-shadow-500);
-	border-radius: 5px;
-	margin: 0 auto;
-	border-radius: 10px;
-	will-change: contents;
-	transition: transform 0.5s;
-}
-.project-card:hover {
-	transform: scale(1.05);
-}
-.card-title {
-	display: grid;
-	place-items: center;
-	background-color: var(--primary-color-100);
-	width: 100%;
-	height: 75px;
-	font-size: 1.25rem;
-	letter-spacing: 1px;
-	font-weight: 400;
-	border-bottom-right-radius: 4px;
-	border-bottom-left-radius: 4px;
-}
-.card-img {
-	height: 200px;
-	border-bottom: 1px solid var(--primary-color-500);
-	border-top-right-radius: 4px;
-	border-top-left-radius: 4px;
-}
-@media (min-width: 700px) {
-	.project-cards-container {
-		width: 90%;
-		grid-template-columns: 1fr 1fr;
-	}
-}
-@media (min-width: 1000px) {
-	.project-cards-container {
-		grid-template-columns: repeat(3, 1fr);
-	}
 }
