--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ a:visited {
 }
 
 body {
+	position: relative;
 	width: 100vw;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
