--- a/src/components/sectionProjects.css
+++ b/src/components/sectionProjects.css
@@ -3,12 +3,12 @@
 	min-height: 100vh;
 	width: 100%;
 	display: flex;
-	padding: 3rem 0;
-	padding-bottom: 5rem;
+	padding: 4rem 0;
 	flex-direction: column;
 	align-items: center;
-	background-color: var(--primary-color-200);
-	box-shadow: 0 0 10px -2px rgb(143, 143, 143);
+	justify-content: flex-start;
+	gap: 2rem;
+	background-color: var(--primary-color-500);
 }
 .project-cards-container {
 	width: 70%;
@@ -30,22 +30,42 @@
 	margin: 0 auto;
 	border-radius: 10px;
 	will-change: contents;
-	transition: transform 0.5s;
+	transition: all 0.5s;
 }
 .project-card:hover {
 	transform: scale(1.05);
 }
-.card-title {
-	display: grid;
-	place-items: center;
+.card-footer {
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	background-color: var(--primary-color-100);
 	width: 100%;
-	height: 75px;
+	height: 70px;
+	border-bottom-right-radius: 4px;
+	border-bottom-left-radius: 4px;
+}
+.card-title {
 	font-size: 1.25rem;
 	letter-spacing: 1px;
 	font-weight: 400;
-	border-bottom-right-radius: 4px;
-	border-bottom-left-radius: 4px;
+}
+.card-icon {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-25%);
+	right: 1.25rem;
+	border: transparent;
+	background-color: transparent;
+	font-size: 1.25rem;
+	opacity: 0;
+	cursor: pointer;
+	will-change: contents;
+	transition: all 0.5s;
+}
+.project-card:hover .card-icon {
+	opacity: 1;
 }
 .card-img {
 	object-fit: contain;
